--- a/hmetrics/pyproject.toml
+++ b/hmetrics/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "hmetrics"
 version = "0.1.0"
-dependencies = ["yfinance", "influxdb-client"]
+dependencies = ["requests", "yfinance"]
 
 [project.scripts]
 hmetrics = "hmetrics.__main__:main"
