--- a/hmetrics/pyproject.toml
+++ b/hmetrics/pyproject.toml
@@ -5,7 +5,10 @@ build-backend = "hatchling.build"
 [project]
 name = "hmetrics"
 version = "0.1.0"
-dependencies = ["requests", "yfinance"]
+dependencies = ["hcommon @ {root:parent:uri}/hcommon", "requests"]
 
 [project.scripts]
 hmetrics = "hmetrics.__main__:main"
+
+[tool.hatch.metadata]
+allow-direct-references = true
