--- a/hvests/pyproject.toml
+++ b/hvests/pyproject.toml
@@ -5,6 +5,10 @@ build-backend = "hatchling.build"
 [project]
 name = "hvests"
 version = "0.1.0"
+dependencies = ["hcommon @ {root:parent:uri}/hcommon"]
 
 [project.scripts]
 hvests = "hvests.__main__:main"
+
+[tool.hatch.metadata]
+allow-direct-references = true
