--- a/hstocks/pyproject.toml
+++ b/hstocks/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "hstocks"
 version = "0.1.0"
-dependencies = ["hcommon @ {root:parent:uri}/hcommon", "yfinance"]
+dependencies = ["hcommon @ {root:parent:uri}/hcommon"]
 
 [project.scripts]
 hstocks = "hstocks.__main__:main"
