--- a/htreas/pyproject.toml
+++ b/htreas/pyproject.toml
@@ -5,6 +5,10 @@ build-backend = "hatchling.build"
 [project]
 name = "htreas"
 version = "0.1.0"
+dependencies = ["hcommon @ {root:parent:uri}/hcommon"]
 
 [project.scripts]
 htreas = "htreas.__main__:main"
+
+[tool.hatch.metadata]
+allow-direct-references = true
